--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "rm logs/* && pm2 start ecosystem.config.js"
   },
   "keywords": [],
   "author": "",
